<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="add_frield_title">添加朋友</string>
    <string name="edit_info_title">修改信息</string>
    <string name="label_username">邮箱:</string>
    <string name="label_nickname">昵称:</string>
    <string name="label_password">密码:</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_nickname">请输入昵称</string>
    <string name="hint_password">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="reg_btn">注册</string>
    <string name="send_btn">发送</string>
    <string name="exit_btn">注销</string>
</resources>
