<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <fragment
            android:id="@+id/id_fragment_title"
            android:name="com.example.myapp.fragments.TitleFragment"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            tools:layout="@layout/fragment_title"/>
    <LinearLayout android:layout_width="fill_parent"
                  android:orientation="vertical"
                  android:padding="50dp"
                  android:layout_height="fill_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:layout_width="69dp"
                      style="@style/CodeFont"
                      android:text="@string/label_username"
                      android:textStyle="bold"/>
            <EditText
                    style="@style/CodeFont"
                    android:id="@+id/userName"
                    android:singleLine="true"
                    android:text=""
                    android:hint="@string/hint_username"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:layout_width="69dp"
                      style="@style/CodeFont"
                      android:text="@string/label_password"
                      android:textStyle="bold"/>
            <EditText
                    style="@style/CodeFont"
                    android:id="@+id/password"
                    android:singleLine="true"
                    android:text=""
                    android:hint="@string/hint_password"
                    android:password="true"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:layout_height="wrap_content">
            <Button
                    android:layout_width="100dp"
                    android:background="#ff3caf34"
                    android:layout_marginLeft="20dp"
                    style="@style/CodeFont"
                    android:text="@string/login_btn"
                    android:id="@+id/doLogin"
                    android:layout_gravity="center_horizontal"/>
            <Button
                    android:layout_width="100dp"
                    android:background="#ff3caf34"
                    android:layout_marginLeft="50dp"
                    style="@style/CodeFont"
                    android:text="@string/reg_btn"
                    android:id="@+id/doReg"
                    android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
