<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:layout_width="69dp"
                      style="@style/CodeFont"
                      android:text="@string/label_username"
                      android:textStyle="bold"/>
            <TextView
                    style="@style/CodeFont"
                    android:id="@+id/userName"
                    android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView android:layout_width="69dp"
                      style="@style/CodeFont"
                      android:text="@string/label_nickname"
                      android:textStyle="bold"/>
            <TextView
                    style="@style/CodeFont"
                    android:id="@+id/nickname"
                    android:singleLine="true"/>
        </LinearLayout>
    <Button android:layout_width="100dp"
            android:id="@+id/action_exit"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/exit_btn"
            android:layout_height="wrap_content"/>
</LinearLayout>
